# niri-session

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: checks.yml  release.yml
src/: logger.rs  main.rs
