[package]
name = "niri-session"
description = "A session manager for Niri, a scrollable-tiling Wayland compositor"
version = "0.1.0"
authors = ["Amaan Qureshi <contact@amaanq.com>"]
edition = "2024"
repository = "https://github.com/amaanq/niri-session"
license = "MPL-2.0"
categories = ["command-line-utilities", "config"]
keywords = ["niri", "wayland", "session", "window-manager"]

[dependencies]
anstyle = "1.0.13"
clap = { version = "4.5.48", features = ["cargo", "derive", "env"] }
color-eyre = { version = "0.6.5", default-features = false }
dirs = "6.0.0"
eyre = "0.6.12"
log = { version = "0.4.28", features = ["std"] }
niri-ipc = "25.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = "0.3.18"
thiserror = "2.0.17"
toml = "0.9.7"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
